--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "",
 	"private": true,
 	"scripts": {
+		"test": "jest",
 		"build": "webpack --config webpack.prod.js",
 		"serve": "webpack serve --open --config webpack.dev.js"
 	},
@@ -13,6 +14,7 @@
 	"devDependencies": {
 		"css-loader": "^6.5.1",
 		"html-webpack-plugin": "^5.5.0",
+		"jest": "^27.4.7",
 		"style-loader": "^3.3.1",
 		"webpack": "^5.66.0",
 		"webpack-cli": "^4.9.1",
