player obj changes + new files - added main.css - added createElement.js - makeMove() now operates on the player's own board - added getMove() method to computer player

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"private": true,
 	"scripts": {
-		"test": "jest",
+		"test": "jest --env=jsdom",
 		"build": "webpack --config webpack.prod.js",
 		"serve": "webpack serve --open --config webpack.dev.js"
 	},
